# aws-whatsapp-chatbot

./: .gitignore  README.md  cdk.json  local-tests.sh  pyproject.toml
.github/prerequisites/: README.md
.github/workflows/: deploy.yml
assets/: aws-whatsapp-chatbot-state-machine.excalidraw  aws-whatsapp-chatbot.excalidraw
backend/bedrock_agent/: dynamodb_helper.py  fetch_calendar_events.py  lambda_function.py
backend/common/: enums.py  logger.py  text_message_model.py
backend/common/helpers/: secrets_helper.py
backend/common/models/: text_message_model.py
backend/state_machine/: __init__.py  base_step_function.py  state_machine_handler.py
backend/state_machine/processing/: bedrock_agent.py  process_text.py  process_voice.py  send_message.py
backend/state_machine/utils/: __init__.py  failure.py  success.py  validate_message.py
backend/trigger/: trigger_handler.py
backend/trigger/helpers/: step_functions_helper.py
backend/trigger_message_processing/: trigger_handler.py
backend/trigger_message_processing/helpers/: step_functions_helper.py
backend/whatsapp_chatbot/helpers/: dynamodb_helper.py
backend/whatsapp_chatbot/models/: message_base_model.py  text_message_model.py
backend/whatsapp_input/common/: enums.py  logger.py
cdk/: app.py
cdk/stacks/: cdk_chatbot_api_stack.py
custom_resources/: create_oss_index.py
docs/: AWS_CONFIGURATION.md  WHATSAPP_CONFIGURATION.md
lambda-layers/common/: Makefile  requirements.txt
tests/to_organize/: load_data_to_ddb.py  load_ddb_with_contacts.py  load_ddb_with_events.py  load_ddb_with_todos.py
(+18 files in other folders)
